iowow (1.3.11) UNRELEASED; urgency=medium

  * Added size_t iwpool_allocated_size(IWPOOL *pool) (iwpool.h)

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 05 Apr 2019 16:53:00 +0700

iowow (1.3.10) testing; urgency=medium

  * Added cmake `OWNER_PROJECT_NAME` option used to install header files in `CMAKE_INSTALL_INCLUDEDIR}/OWNER_PROJECT_NAME/PROJECT_NAME`
  * Removed `-fvisibility=hidden` C flag when building shared library

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 05 Apr 2019 11:53:34 +0700

iowow (1.3.9) testing; urgency=medium

  * BUG `IW_HAVE_PTHREAD_CONDATTR_SETCLOCK` was not properly set for `iwal.c` hence high CPU usage when `wal` mode is on.

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 29 Mar 2019 23:56:25 +0700

iowow (1.3.8) testing; urgency=medium

  * BUG Fixed incorrect call of `_kvblk_kv_get` in `iwkv_cursor_seth`.
    See https://github.com/Softmotions/ejdb/issues/231

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 27 Mar 2019 12:34:10 +0700

iowow (1.3.7) testing; urgency=medium

  * Added `iwkv_cursor_del()` (#22)
  * Fixed memory corruption during simultaneous cursor iteration and value updating

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 26 Mar 2019 18:24:35 +0700

iowow (1.3.6) testing; urgency=medium

  * BUG: Memory leak in `iwkv_cursor_open` on error (#21)
  * BUG: `iwxstr_new2()` with zero size argument causes illegal memory write (#20)
  * Added `iwkv_cursor_seth()` record update handle supported by `iwkv_cursor_set`
  * Avoided deadlocks with `iwkv_del()` - now this function does't escalate exclusive lock on storage
  * More consistent error reporting using cursor functions

 -- Anton Adamansky <adamansky@gmail.com>  Fri, 22 Mar 2019 16:29:32 +0700

iowow (1.3.5) testing; urgency=medium

  * BUG: Data from deleted database can interfere with newly created db (#19)

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 20 Mar 2019 20:26:22 +0700

iowow (1.3.4) testing; urgency=medium

  * Code documentation improvements
