@@ -1,6 +1,13 @@
 iowow (1.3.11) UNRELEASED; urgency=medium
 
   * Added size_t iwpool_allocated_size(IWPOOL *pool) (iwpool.h)
+  * Added `file_lock_fail_fast` iwkv open option.
+    If `true` - do not wait and raise error if database is locked by another process
+  * Fixed meaningful PVP studio errors:
+    - kv/iwkv.c:593:1: error: V774
+    - kv/iwkv.c:1375:1: warning: V649
+    - kv/iwkv.c:3357:1: warning: V581
+    - utils/iwxstr.c:59:1: warning: V701
 
  -- Anton Adamansky <adamansky@gmail.com>  Fri, 05 Apr 2019 16:53:00 +0700
 
